fixed wrong padding in nav bar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,14 +6,13 @@
   --verydarkblue: #0b182d;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 * {
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;  
+  font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -141,6 +140,7 @@ nav {
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
     background-color: #0a192f;
+    padding: 0;
   }
 
   .nav-links li {
